fix: collapse and git button overlapping issue

--- a/src/extensions/default/Git/styles/git-styles.less
+++ b/src/extensions/default/Git/styles/git-styles.less
@@ -907,6 +907,7 @@
     white-space: nowrap;
     padding: 2px 5px;
     margin-left: -5px;
+    margin-right: 2em;
     .dropdown-arrow {
         display: inline-block;
         width: 7px;
